--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -19,7 +19,7 @@ $mainTransition : 'all 0.1s ease';
 .section-main {
     @include section;
     // background-color: green;
-    background-image: url('../images/4.jpg');
+    background-image: url('../images/4 (1).jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 60%;
@@ -35,13 +35,13 @@ $mainTransition : 'all 0.1s ease';
     .text {
         position: absolute;
        
-        margin-top: 22vh;
+        margin-top: 25vh;
         left: 5%;
         transition: $mainTransition;
 
         h1 {
             // font-size: calc((250vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
-            // font-size: 1rem;
+            font-size: 0.8rem;
             color: rgb(255, 0, 212);
             // color: #EC14C9;
             font-family: Rochester;
@@ -53,9 +53,9 @@ $mainTransition : 'all 0.1s ease';
         p {
             margin-top: 10%;
             font-family: 'Sansation Light';
-            // font-size: calc((20vh - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
-            font-size: 1.5rem;
-            line-height: 1.8rem;
+            // font-size: calc((1vh - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+            font-size: 0.6rem;
+            // line-height: 1.8rem;
             color: #E3BBDD;
             // color: yellow;
             font-family: Sansation Light;
@@ -65,6 +65,13 @@ $mainTransition : 'all 0.1s ease';
     }
 
 }
+.section-empty{
+    @include section;
+    position: absolute;
+    top: 0;
+    // background-color: red;
+    opacity: 0;
+}
 
 .section-text {
     padding: 0 5%;
@@ -72,13 +79,14 @@ $mainTransition : 'all 0.1s ease';
     z-index: 10;
 
     h1 {
-        font-size: calc((220vh - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+        font-size: 0.8rem;
+        // font-size: calc((220vh - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
         // font-size: 4vh;
     }
 
     p {
         margin-top: .5rem !important;
-        font-size: calc((120vh - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+        font-size: 0.6rem;
         // font-size: 2.8vh;
         text-align: center;
         text-align: justify;
@@ -87,7 +95,8 @@ $mainTransition : 'all 0.1s ease';
 
 .section-watercolor {
     @include section;
-    margin-top: 100vh;
+    // margin-top: 100vh;
+    // transform: translateY(-100vh);
  
 
     .bg {
