--- a/css/main.css
+++ b/css/main.css
@@ -66,16 +66,16 @@
   opacity: 0; }
 
 .section-text {
-  padding: 0 5%;
+  padding: 0 2%;
   text-align: center;
   z-index: 10; }
   .section-text h1 {
     font-size: 0.8rem; }
   .section-text p {
     margin-top: .5rem !important;
-    font-size: 0.6rem;
+    font-size: 0.5rem;
     text-align: center;
-    text-align: justify; }
+    word-wrap: break-word; }
 
 .section-watercolor {
   width: 100%;
@@ -169,20 +169,17 @@
   .section-price .text {
     margin-top: 20vh; }
 
-.uk-panel img {
-  object-fit: cover;
-  height: 100%; }
-
 .swiper-container {
   width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px; }
+  margin-top: 5vh;
+  margin-bottom: 50px;
+  height: 55vh; }
 
 .swiper-slide {
-  background-position: center;
-  background-size: cover;
-  width: 300px;
-  height: 300px; }
+  width: auto !important;
+  height: 100%; }
+  .swiper-slide img {
+    object-fit: cover; }
 
 .burger {
   width: 40px;
