--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -74,7 +74,7 @@ $mainTransition : 'all 0.1s ease';
 }
 
 .section-text {
-    padding: 0 5%;
+    padding: 0 2%;
     text-align: center;
     z-index: 10;
 
@@ -86,10 +86,12 @@ $mainTransition : 'all 0.1s ease';
 
     p {
         margin-top: .5rem !important;
-        font-size: 0.6rem;
+        font-size: 0.5rem;
         // font-size: 2.8vh;
         text-align: center;
-        text-align: justify;
+        word-wrap :break-word;
+        // letter-spacing: 2px;
+        // text-align: justify;
     }
 }
 
@@ -189,14 +191,14 @@ $mainTransition : 'all 0.1s ease';
 
 
 
-.uk-panel{
-    // background-color: orange;
-    img{
-        object-fit: cover;
-        //  background-color: red;
-          height: 100%
-    }
-}
+// .uk-panel{
+//     // background-color: orange;
+//     img{
+//         object-fit: cover;
+//         //  background-color: red;
+//           height: 100%
+//     }
+// }
 
 
 
@@ -299,14 +301,21 @@ $mainTransition : 'all 0.1s ease';
 
 .swiper-container {
     width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    // padding-top: 50px;
+    // padding-bottom: 50px;
+    margin-top: 5vh;
+    // background-color: red;
+    margin-bottom: 50px;
+    height: 55vh;
   }
 
   .swiper-slide {
-    background-position: center;
-    background-size: cover;
-    width: 300px;
-    height: 300px;
+    // background-position: center;
+    // background-size: cover;
+    width: auto !important;
+    height: 100%;
+    img{
+        object-fit: cover;
+    }
 
   }
