--- a/css/section-main.css
+++ b/css/section-main.css
@@ -4,8 +4,8 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 1px solid white;
+  background-color: white;
   z-index: 1;
   background-image: url("../images/4 (1).jpg");
   background-repeat: no-repeat;
@@ -23,9 +23,9 @@
     left: 5%;
     transition: "all 0.1s ease"; }
     .section-main .text h1 {
-      font-size: 0.8rem;
-      color: #ff00d4;
-      font-family: Rochester;
+      font-size: 0.7rem;
+      color: #CE43FF;
+      font-family: 'Great Vibes';
       font-style: normal;
       font-weight: normal;
       transition: "all 0.1s ease"; }
@@ -33,7 +33,7 @@
       margin-top: 10%;
       font-family: 'Sansation Light';
       font-size: 0.6rem;
-      color: #E3BBDD;
+      color: #B3A0FF;
       font-family: Sansation Light;
       font-style: normal;
       transition: "all 0.1s ease"; }
@@ -44,8 +44,8 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 1px solid white;
+  background-color: white;
   z-index: 1;
   position: absolute;
   top: 0;
@@ -64,13 +64,14 @@
     word-wrap: break-word; }
 
 .section-watercolor {
+  box-shadow: 0em -0.2em 0.4rem rgba(0, 0, 0, 0.3);
   width: 100%;
   min-height: 100vh !important;
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 1px solid white;
+  background-color: white;
   z-index: 1; }
   .section-watercolor .bg {
     position: absolute;
@@ -86,8 +87,8 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 1px solid white;
+  background-color: white;
   z-index: 1; }
   .section-inc .bg1 {
     position: absolute;
@@ -98,8 +99,9 @@
   .section-inc .bg2 {
     position: absolute;
     z-index: -1;
-    top: 23vh;
-    width: 100%; }
+    top: 40vh;
+    width: 100%;
+    transform: rotate(-60deg); }
 
 .section-pencil {
   width: 100%;
@@ -107,8 +109,8 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 1px solid white;
+  background-color: white;
   z-index: 1; }
   .section-pencil .bg1 {
     position: absolute;
@@ -125,16 +127,36 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 1px solid white;
+  background-color: white;
   z-index: 1; }
-  .section-sepia .bg1 {
+  .section-sepia .bg {
     position: absolute;
     width: 100%;
-    top: 25vh;
+    right: 0;
+    height: 100%;
+    z-index: -1;
+    background-image: url("../images/bg/sepia.jpg");
+    background-size: cover; }
+  .section-sepia .swiper-container {
+    height: 60vh; }
+
+.section-acrylic {
+  width: 100%;
+  min-height: 100vh !important;
+  min-height: -webkit-fill-available;
+  position: relative;
+  padding-top: 8vh;
+  border: 1px solid white;
+  background-color: white;
+  z-index: 1; }
+  .section-acrylic .bg1 {
+    position: absolute;
+    width: 100%;
+    top: 20vh;
     right: 0;
     z-index: -1; }
-  .section-sepia .swiper-container {
+  .section-acrylic .swiper-container {
     height: 60vh; }
 
 .section-price {
@@ -143,8 +165,8 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid black;
-  background-color: #fff;
+  border: 1px solid white;
+  background-color: white;
   z-index: 1; }
   .section-price .bg1 {
     position: absolute;
