--- a/css/nav.css
+++ b/css/nav.css
@@ -6,9 +6,12 @@
   right: 3%;
   box-sizing: border-box;
   z-index: 20;
+  margin: 0;
+  padding: 0;
   transition: all 0.8s ease; }
   .burger div {
-    z-index: 20; }
+    z-index: 20;
+    line-height: 1px; }
   .burger div:nth-child(1) {
     position: absolute;
     top: 5px;
@@ -20,9 +23,10 @@
     transition-delay: 0.5s; }
   .burger div:nth-child(2) {
     position: absolute;
-    top: 15px;
+    top: 17px;
     width: 100%;
     height: 2px;
+    line-height: 1px;
     background-color: white;
     transition: all 0.5s ease;
     border-radius: 10px;
