--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,16 +1,16 @@
 
-@font-face {
-    font-family: 'Rochester';
-    // src: local('Rochester'), url('rochester.woff2') format('woff2'), url('rochester.woff') format('woff'), url('rochester.ttf') format('truetype');
-    src: url('../fonts/rochester.ttf'); /* IE 9 Compatibility Mode */
-	// src: url('../fonts/rochester.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
-	// 	url('../fonts/rochester.woff2') format('woff2'), /* Super Modern Browsers */
-	// 	url('../fonts/rochester.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-	// 	url('../fonts/rochester.ttf') format('truetype'), /* Safari, Android, iOS */
-	// 	url('../fonts/rochester.svg#sansation_light') format('svg'); /* Chrome < 4, Legacy iOS */
-    font-weight: 400;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'Rochester';
+//     // src: local('Rochester'), url('rochester.woff2') format('woff2'), url('rochester.woff') format('woff'), url('rochester.ttf') format('truetype');
+//     src: url('../fonts/rochester.ttf'); /* IE 9 Compatibility Mode */
+// 	// src: url('../fonts/rochester.eot?#iefix') format('embedded-opentype'), /* IE < 9 */
+// 	// 	url('../fonts/rochester.woff2') format('woff2'), /* Super Modern Browsers */
+// 	// 	url('../fonts/rochester.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
+// 	// 	url('../fonts/rochester.ttf') format('truetype'), /* Safari, Android, iOS */
+// 	// 	url('../fonts/rochester.svg#sansation_light') format('svg'); /* Chrome < 4, Legacy iOS */
+//     font-weight: 400;
+//     font-style: normal;
+// }
 
 
 @font-face {
@@ -23,3 +23,10 @@
 		url('../fonts/sansation_light.svg#sansation_light') format('svg'); /* Chrome < 4, Legacy iOS */
 }
 
+@font-face {
+	font-family: 'Great Vibes';
+	src: url('../fonts/greatvibes.ttf');
+    // src: local('Great Vibes'), local('GreatVibes-Regular'), url('greatvibes.woff2') format('woff2'), url('greatvibes.woff') format('woff'), url('greatvibes.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
