--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -11,8 +11,9 @@ $mainTransition : 'all 0.1s ease';
     // height: auto;
     position: relative;
     padding-top: 8vh;
-    border: 1px solid black;
-    background-color: #fff;
+    border: 1px solid white;
+    // border: none;
+    background-color: white;
     z-index: 1;
 }
 
@@ -41,10 +42,12 @@ $mainTransition : 'all 0.1s ease';
 
         h1 {
             // font-size: calc((250vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
-            font-size: 0.8rem;
-            color: rgb(255, 0, 212);
+            font-size: 0.7rem;
+            // color: rgb(255, 0, 212);
+            color:#CE43FF;
             // color: #EC14C9;
-            font-family: Rochester;
+            // font-family: Rochester;
+            font-family: 'Great Vibes';
             font-style: normal;
             font-weight: normal;
             transition: $mainTransition;
@@ -56,7 +59,8 @@ $mainTransition : 'all 0.1s ease';
             // font-size: calc((1vh - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
             font-size: 0.6rem;
             // line-height: 1.8rem;
-            color: #E3BBDD;
+            // color: #E3BBDD;
+            color: #B3A0FF;
             // color: yellow;
             font-family: Sansation Light;
             font-style: normal;
@@ -96,6 +100,7 @@ $mainTransition : 'all 0.1s ease';
 }
 
 .section-watercolor {
+    box-shadow: 0em -0.2em 0.4rem rgba(0, 0, 0, 0.3);
     @include section;
     // margin-top: 100vh;
     // transform: translateY(-100vh);
@@ -116,8 +121,10 @@ $mainTransition : 'all 0.1s ease';
 }
 
 .section-inc{
+
     .text{
         // width: 80%;
+        // background-color: red;
     }
     @include section;
     .bg1{
@@ -131,10 +138,14 @@ $mainTransition : 'all 0.1s ease';
     .bg2{
         position: absolute;
         z-index: -1;
-        top: 23vh;
+        // top: 27vh;
+        top : 40vh;
         width: 100%;
+        transform: rotate(-60deg);
+        // border: 1px solid red;
     }
 }
+
 .section-pencil{
 
     @include section;
@@ -156,16 +167,48 @@ $mainTransition : 'all 0.1s ease';
 .section-sepia{
 
     @include section;
+    .bg{
+        position: absolute;
+        
+        width: 100%;
+        // top: 25vh;
+        right: 0;
+        height: 100%;
+        z-index: -1;
+
+        // transform: rotate(-90deg);
+        // top:40vh;
+        // height: 80vh;
+        background-image: url('../images/bg/sepia.jpg');
+        // border: 1px solid red;
+        // background-position: 50% 0;
+        background-size: cover;
+
+    }
+    .swiper-container{
+        height: 60vh;
+    
+    }
+
+}
+.section-acrylic{
+
+    @include section;
     .bg1{
         position: absolute;
         
         width: 100%;
-        top: 25vh;
+        top: 20vh;
         right: 0;
         z-index: -1;
+        // transform: rotate(-60deg);
+        // top:40vh;
+        // height: 80vh;
+        // border: 1px solid red;
     }
     .swiper-container{
         height: 60vh;
+    
     }
 
 }
