--- a/css/main.css
+++ b/css/main.css
@@ -11,13 +11,32 @@
   font-weight: 400;
   font-style: normal; }
 
+.loader {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 10;
+  background-color: #fff; }
+  .loader .loader-text {
+    position: fixed;
+    margin-top: 33vh;
+    left: 5%; }
+    .loader .loader-text h1 {
+      font-size: 0.7rem;
+      color: #CE43FF;
+      font-family: 'Great Vibes';
+      font-style: normal;
+      font-weight: normal;
+      transition: "all 0.1s ease";
+      opacity: 0; }
+
 .section-main {
   width: 100%;
   min-height: 100vh !important;
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1;
   background-image: url("../images/4 (1)small.jpg");
@@ -31,10 +50,9 @@
   left: 0;
   z-index: -1; }
   .section-main .text {
-    position: absolute;
+    position: fixed;
     margin-top: 25vh;
-    left: 5%;
-    transition: "all 0.1s ease"; }
+    left: 5%; }
     .section-main .text h1 {
       font-size: 0.7rem;
       color: #CE43FF;
@@ -57,7 +75,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1;
   position: absolute;
@@ -83,7 +101,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-watercolor .bg {
@@ -100,7 +118,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-inc .bg1 {
@@ -122,7 +140,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-pencil .bg1 {
@@ -140,7 +158,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-sepia .bg {
@@ -160,7 +178,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-acrylic .bg1 {
@@ -178,7 +196,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-price .bg1 {
