--- a/css/section-main.css
+++ b/css/section-main.css
@@ -1,10 +1,29 @@
+.loader {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  z-index: 10;
+  background-color: #fff; }
+  .loader .loader-text {
+    position: fixed;
+    margin-top: 33vh;
+    left: 5%; }
+    .loader .loader-text h1 {
+      font-size: 0.7rem;
+      color: #CE43FF;
+      font-family: 'Great Vibes';
+      font-style: normal;
+      font-weight: normal;
+      transition: "all 0.1s ease";
+      opacity: 0; }
+
 .section-main {
   width: 100%;
   min-height: 100vh !important;
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1;
   background-image: url("../images/4 (1)small.jpg");
@@ -18,10 +37,9 @@
   left: 0;
   z-index: -1; }
   .section-main .text {
-    position: absolute;
+    position: fixed;
     margin-top: 25vh;
-    left: 5%;
-    transition: "all 0.1s ease"; }
+    left: 5%; }
     .section-main .text h1 {
       font-size: 0.7rem;
       color: #CE43FF;
@@ -44,7 +62,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1;
   position: absolute;
@@ -70,7 +88,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-watercolor .bg {
@@ -87,7 +105,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-inc .bg1 {
@@ -109,7 +127,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-pencil .bg1 {
@@ -127,7 +145,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-sepia .bg {
@@ -147,7 +165,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-acrylic .bg1 {
@@ -165,7 +183,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid white;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1; }
   .section-price .bg1 {
