--- a/css/section-main.css
+++ b/css/section-main.css
@@ -26,7 +26,7 @@
   border: 1px solid rgba(255, 255, 255, 0.1);
   background-color: white;
   z-index: 1;
-  background-image: url("../images/4 (1)small.jpg");
+  background-image: url("../images/4 (1).jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 60%;
