--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -43,7 +43,8 @@ $mainTransition : 'all 0.1s ease';
 .section-main {
     @include section;
     // background-color: green;
-    background-image: url('../images/4 (1)small.jpg');
+    background-image: url('../images/4 (1).jpg');
+    // background-image: url('../images/4 (1)small.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 60%;
