--- a/scss/main.scss
+++ b/scss/main.scss
@@ -47,8 +47,10 @@ li {
 .container {
   width: 100%;
   min-height: 100vh;
+  // margin : auto;
 
   // height: auto;
   //   background-color: red;
 }
+
 
