--- a/css/main.css
+++ b/css/main.css
@@ -42,13 +42,14 @@
   background-image: url("../images/4 (1).jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 60%;
+  background-position: top center;
   position: relative;
   transition: "all 0.1s ease";
   position: fixed;
   top: 0;
   left: 0;
-  z-index: -1; }
+  z-index: -1;
+  border: none; }
   .section-main .text {
     position: fixed;
     margin-top: 25vh;
@@ -95,7 +96,6 @@
     word-wrap: break-word; }
 
 .section-watercolor {
-  box-shadow: 0em -0.2em 0.4rem rgba(0, 0, 0, 0.3);
   width: 100%;
   min-height: 100vh !important;
   min-height: -webkit-fill-available;
@@ -131,6 +131,7 @@
     position: absolute;
     z-index: -1;
     bottom: 10vh;
+    left: -10vw;
     width: 100%;
     transform: rotate(-60deg); }
 
@@ -202,6 +203,7 @@
   .section-price .bg1 {
     position: absolute;
     width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     z-index: -1; }
@@ -219,6 +221,56 @@
   height: 100%; }
   .swiper-slide img {
     object-fit: cover; }
+
+@media all and (min-width: 1000px) {
+  .section {
+    padding: 0 10%; }
+  .text h1 {
+    font-size: 1rem; }
+  .text p {
+    font-size: 0.7rem; } }
+
+@media all and (min-width: 800px) {
+  .text h1 {
+    font-size: 0.9rem; }
+  .text p {
+    font-size: 0.5rem; }
+  .section-main .text-main {
+    top: -10vh;
+    left: 5% !important; }
+    .section-main .text-main h1 {
+      font-size: 2.4rem !important; }
+    .section-main .text-main p {
+      font-size: 0.9rem !important; }
+  .section-main {
+    background-image: url("../images/main-big.jpg"); }
+  .section.flex {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; }
+    .section.flex img {
+      width: 50%; }
+    .section.flex .text {
+      width: 40%; }
+    .section.flex .swiper-container {
+      width: 50%;
+      height: 80vh; }
+  .section.flex.reverce {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row-reverse; } }
+
+@media all and (min-width: 650px) {
+  .text-main {
+    margin-top: 35vh !important;
+    left: 5%; }
+    .text-main h1 {
+      font-size: 1.4rem !important; }
+    .text-main p {
+      font-size: 0.9rem !important; }
+  .swiper-container {
+    height: 65vh; } }
 
 .burger {
   width: 40px;
@@ -297,6 +349,10 @@
         text-decoration: none;
         text-transform: uppercase;
         color: black; }
+
+@media all and (min-width: 1050px) {
+  .burger {
+    top: 5vh; } }
 
 * {
   padding: 0;
