--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid white;
   background-color: white;
   z-index: 1;
   background-image: url("../images/4 (1).jpg");
@@ -76,7 +76,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid white;
   background-color: white;
   z-index: 1;
   position: absolute;
@@ -101,7 +101,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
   .section-watercolor .bg {
@@ -118,22 +118,15 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
-  .section-inc .bg1 {
-    position: absolute;
-    width: 30%;
-    top: 10vh;
-    right: 0;
-    z-index: -1; }
   .section-inc .bg2 {
     position: absolute;
     z-index: -1;
-    bottom: 10vh;
-    left: -10vw;
-    width: 100%;
-    transform: rotate(-60deg); }
+    bottom: 0vh;
+    right: 0;
+    width: 40% !important; }
 
 .section-pencil {
   width: 100%;
@@ -141,14 +134,15 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
   .section-pencil .bg1 {
     position: absolute;
-    top: 25%;
-    height: 70%;
-    right: 0;
+    bottom: 0%;
+    height: 30%;
+    width: 80%;
+    left: 0%;
     z-index: -1; }
   .section-pencil .swiper-container {
     margin-top: 10vh; }
@@ -159,15 +153,16 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
   .section-sepia .bg {
     position: absolute;
-    width: 100%;
+    width: 50%;
     right: 0;
-    height: 100%;
+    height: 50%;
     z-index: -1;
+    bottom: 0;
     background-image: url("../images/bg/sepia.jpg");
     background-size: cover; }
   .section-sepia .swiper-container {
@@ -179,15 +174,17 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
   .section-acrylic .bg1 {
     position: absolute;
-    width: 100%;
-    top: 20vh;
-    right: 0;
-    z-index: -1; }
+    width: 70%;
+    height: 200px;
+    left: 20%;
+    top: 30vh;
+    z-index: -1;
+    transform: rotate(-90deg); }
   .section-acrylic .swiper-container {
     height: 60vh; }
 
@@ -197,7 +194,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 8vh;
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
   .section-price .bg1 {
@@ -282,7 +279,8 @@
   z-index: 20;
   margin: 0;
   padding: 0;
-  transition: all 0.8s ease; }
+  transition: all 0.8s ease;
+  cursor: pointer; }
   .burger div {
     z-index: 20;
     line-height: 1px; }
