--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -21,6 +21,7 @@ $blackcolor: black;
     margin: 0;
     padding: 0;
     transition: all 0.8s ease;
+    cursor: pointer;
 
     // margin-right: 20px;
     div {
