--- a/css/section-main.css
+++ b/css/section-main.css
@@ -81,6 +81,19 @@
     font-size: 0.5rem;
     text-align: center;
     word-wrap: break-word; }
+  .section-text .btn {
+    width: 80%;
+    margin: auto;
+    padding: 5px 5px;
+    border-radius: 15px;
+    background-color: rgba(4, 124, 255, 0.5);
+    color: white;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: all 0.5s ease; }
+  .section-text .btn:hover {
+    background-color: rgba(4, 124, 255, 0.8);
+    transition: all 0.5s ease; }
 
 .section-watercolor {
   width: 100%;
@@ -202,7 +215,10 @@
 
 .swiper-slide {
   width: auto !important;
-  height: 100%; }
+  height: 100%;
+  margin: auto;
+  display: flex;
+  justify-content: center; }
   .swiper-slide img {
     object-fit: cover; }
 
